added playlists RIT-6
